# vecfs

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Dockerfile.integration  README.md  docker-compose.yml  esbuild.config.mjs  install-from-github.sh  package-lock.json  package.json  sentence-transformer-compose.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: pages.yml
docs/: doc-guide.md  goals.md  mcp-server-connections.md  requirements.md  skills.md
docs/notes/: 2026-02-13-language-and-sdk.md  2026-02-14-integration-testing-results.md  2026-02-14-integration-testing-strategies.md  2026-02-14-vecfs-implementation-plan.md  2026-02-15-agent-skill-definition-plan.md  2026-02-15-code-review.md  2026-02-15-dependency-health-check.md  2026-02-15-embedding-script-plan.md  2026-02-15-packaging-and-distribution-plan.md  2026-02-16-github-pipeline-build-and-publish.md  2026-02-16-skill-and-mcp-packaging-installation-approval.md  2026-02-18-github-direct-installation.md  2026-02-19-cursor-plugin-marketplace-plan.md  2026-02-22-cli-language-and-component-combinations.md  2026-02-22-go-implementation.md  2026-02-22-vecfs-package-name-and-cli.md  2026-02-22-vecfs-search-tool.md  2026-02-24-single-tech-stack-versions.md  2026-02-25-cross-model-embedding-compatibility.md  2026-02-25-python-mcp-and-vecfs-py.md  2026-02-25-typescript-single-stack-embedder.md  2026-02-26-implementation-plan.md  2026-02-26-ts-py-go-implementation-comparison.md  2026-02-26-vecfs-actions-work-brief.md  2026-02-27-packaging-and-installation-scripts.md  2026-02-28-tar-vulnerability-audit-fix.md  2026-02-28-transformers-js-and-local-embedder-options.md
go-src/: README.md  go.mod  go.sum
pages/: .gitignore  README.md  go.mod  go.sum  hugo.toml
patches/: fastembed+2.1.0.patch
py-src/: README.md  pyproject.toml
py-src/tests/: test_config.py  test_integration.py  test_sparsify.py  test_vecfs_py_storage.py
py-src/vecfs_embed/: __init__.py  __main__.py  cli.py  config.py  embed.py  sparsify.py  version.py
py-src/vecfs_py/: __init__.py  cli.py  embedder_adapter.py  server.py  sparse.py  storage.py
scripts/: benchmark-embed.mjs  benchmark-embed.sh  benchmark-mcp.mjs  benchmark-mcp.sh  build-go.sh  embed-tei.mjs  inject-version.mjs  package-go.sh  package-py.sh  package-ts.sh  package.sh
ts-src/: README.md  config.test.ts  config.ts  embed-cli.ts  embedder-perf.test.ts  file-mutex.ts  http-integration.test.ts  integration.test.ts  mcp-server.ts  sparse-vector.test.ts  sparse-vector.ts  storage.test.ts  storage.ts  test-vecfs.ts  tool-handlers.ts  tool-schemas.ts  types.ts
vecfs-memory/: SKILL.md
vecfs-plugin/: README.md  mcp.json
(+47 files in other folders)
