[project]
name = "vecfs-embed"
version = "0.1.0"
description = "Model-agnostic embedding script for VecFS sparse vector storage."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Warwick Molloy" },
]
keywords = [
    "vecfs",
    "embedding",
    "sparse-vector",
    "mcp",
    "agent-memory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]",
    "pydantic-ai-slim[sentence-transformers]",
    "pyyaml>=6.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
]

[project.optional-dependencies]
openai = ["pydantic-ai-slim[openai]"]
google = ["pydantic-ai-slim[google]"]
cohere = ["pydantic-ai-slim[cohere]"]
voyageai = ["pydantic-ai-slim[voyageai]"]
all = [
    "pydantic-ai-slim[openai]",
    "pydantic-ai-slim[google]",
    "pydantic-ai-slim[cohere]",
    "pydantic-ai-slim[voyageai]",
]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/WazzaMo/vecfs"
Repository = "https://github.com/WazzaMo/vecfs"
Issues = "https://github.com/WazzaMo/vecfs/issues"

[project.scripts]
vecfs-embed-py = "vecfs_embed.cli:main"
vecfs-embed = "vecfs_embed.cli:main"
vecfs-py = "vecfs_py.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["asyncio: mark test as an async test"]

[tool.hatch.build.targets.wheel]
packages = ["vecfs_embed", "vecfs_py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
